k8s/test/app-ingress.yaml
---
# ---------------------------------------------------
# Ingress for ArgoCD Flask App (argocd-app) at /flask path
# ---------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-app-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: argocd-app.local
      http:
        paths:
          - path: /flask(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-service
                port:
                  number: 5000

---
# ---------------------------------------------------
# Ingress for Loki
# ---------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /loki
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100

---
# ---------------------------------------------------
# Ingress for Grafana
# ---------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 8088
