k8s/test/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-log
  namespace: test
  labels:
    app: busybox-log
spec:
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'while true; do echo "hello from busybox $(date)"; sleep 10; done']
  restartPolicy: Always
