k8s/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  annotations:
    argocd.argoproj.io/sync-wave: "0"
