k8s/test/promtail.yaml
---
# ---------------------------------------------------
# ConfigMap promtail
# ---------------------------------------------------
apiVersion: v1
kind: ConfigMap
metadata:
  name: promtail-config
  namespace: logging
  labels:
    app: promtail
  annotations:
    argocd.argoproj.io/sync-wave: "4"
data:
  config.yaml: |
    server:
      http_listen_port: 9080
      log_level: debug
      grpc_listen_port: 0

    positions:
      filename: /run/promtail/positions.yaml

    clients:
      - url: http://loki.logging.svc.cluster.local:3100/loki/api/v1/push

    scrape_configs:
      - job_name: podlogs
        static_configs:
          - targets:
              - localhost
            labels:
              job: podlogs
              __path__: /var/log/pods/*/*/*/*.log
  
      - job_name: docker-logs
        static_configs:
          - targets:
              - localhost
            labels:
              job: docker-logs
              __path__: /var/lib/docker/containers/*/*.log


---
# ---------------------------------------------------
# DaemonSet promtail
# ---------------------------------------------------
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: logging
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app: promtail
spec:
  selector:
    matchLabels:
      app: promtail   # Must match template.metadata.labels.app
  template:
    metadata:
      labels:
        app: promtail
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: promtail
          image: grafana/promtail:2.8.2
          args:
            - -config.file=/etc/promtail/config.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: dockersock
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: positions
              mountPath: /run/promtail
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: varlog
          hostPath:
            path: /var/log
            type: Directory
        - name: dockersock
          hostPath:
            path: /var/lib/docker/containers
            type: Directory
        - name: positions
          emptyDir: {}
